# molalignlib

./: .gitignore  CHANGELOG.md  Doxyfile  LICENSE  MANIFEST.in  README  README.md  _config.yml  anaconda.env  build  build-lib  build.env  build.sh  buildlib.sh  compile  compilelist  config  config.default  config.mamba  default.env  gnu.env  intel.env  molalign.py  molalignlib.py  postBuild  rebuild  run_tests.sh  runtests.sh  setup.cfg  setup.py  srclist  start
assets/: build.env.intel
binder/: environment.yml  postBuild  requirements.txt  start
examples/: Co138_0.xyz  Co138_1.xyz  Co138_2.xyz  Co138_3.xyz  bactracking.ipynb  example1.ipynb  example1.py  example2.ipynb  example3.ipynb  test24a.xyz  test24b.xyz  test24c.xyz
experimental/: calcequivdist.f90  mapatoms.f90  testcrossbias.f90
fortran/: alignment.f90  assignment.f90  assortment.f90  biasing.f90  build_lib.sh  chemistry.f90  common.f90  compile.sh  decoding.f90  f2cmap_double  f2cmap_single  globals.f90  hungarian.f90  lapack.f90  main.f90  maputils.f90  math.f90  messages.f90  options.f90  printing.f90  ralign.f90  random.f90  readwrite.f90  remapping.f90  rotation.f90  sorting.f90  strutils.f90  superposition.f90  translation.f90
molalign/: __init__.py  argparse.f90  build.sh  f90_files  fileio.f90  molalign.f90  molalign.py  optparse.f90  program.f90  readmol.f90  run_tests.sh  source_files  wrapper.py  writemol.f90
molalignbld/: compile.sh  gnu.env  intel.env  makepyext.sh
molalignlib/: __init__.py  adjacency.f90  alignment.f90  arrutils.f90  assignment.f90  assorting.f90  assortment.f90  backtracking.f90  biasing.f90  bounds.f90  build.sh  chemdata.f90  chemutils.f90  discrete.f90  eap_jv.f90  eap_km.f90  eapjv.f90  eapkm.f90  eigen.f90  eigen_lapack.f90  f2py_files  f90_files  flags.f90  fortran_files  hashtable.f90  hungarian.f90  io.f90  jonker.f90  kinds.f90  lap-hun.f90  lap-jv.f90  lap_dense.f90  lap_sparse.f90  lapack.f90  lapdense.f90  lapjv.f90  lapkm.f90  lapsparse.f90  library.f90  linalg.f90  (+38 more)
molalignutil/: compile.sh  gnu.env  intel.env  link-lib.sh  link-prog.sh  link-pyext.sh  run-tests.sh
python/: build-molalignlib-python  setup.cfg
scripts/: build.sh  compile.sh  gnu.env  intel.env  link_pythonlib.sh  run_tests.sh
source/: actions.f90  alignment.f90  argparse.f90  argutils.f90  assignment.f90  assortment.f90  biasing-r.f90  biasing.f90  build.sh  chemdata.f90  chemistry.f90  compilelist  decoding.f90  discrete.f90  eigen.f90  filelist  fileutils.f90  globals.f90  hungarian.f90  lapack.f90  library.f90  linear.f90  main.f90  maputils.f90  math.f90  messages.f90  minimization.f90  (+20 more)
(+928 files in other folders)
