[metadata]
name = molalignlib
version = 0.9.5
keywords = rmsd alignment molecules clusters
description = A library to align rigid molecules and clusters
#long_description = file: README
#long_description_content_type = text/markdown
url = https://github.com/qcuaeh/molalign
license = LGPLv3+
#license_files = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
py_modules =
   molalign
   molalignlib
python_requires = >=3.3
install_requires =
   numpy
   ase

[options.entry_points]
console_scripts =
   molalign = molalign:molalign
