[metadata]
name = molalignlib
version = 1.0.0
keywords = rmsd alignment molecules clusters
description = A library to align rigid molecules and clusters
url = https://qcuaeh.github.io/molalignlib
license = LGPLv3+
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
py_modules =
   molalign
   molalignlib
python_requires = >=3.3
install_requires =
   numpy
   ase

[options.entry_points]
console_scripts =
   molalign = molalign:molalign
