[metadata]
name = molalign
version = 0.1.0-7
url = https://github.com/qcuaeh/molalign
description = Molecular alignment library
#long_description = file: README.md
#long_description_content_type = text/markdown
keywords = molecules clusters rmsd
license = LGPLv3+
license_files = LICENSE
classifiers =
   Programming Language :: Python :: 3 :: Only
   License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
   Operating System :: POSIX

[options]
python_requires = >=3.3
py_modules =
   molalign
scripts =
   build-molalignlib-python

